force-app/main/default/objects/Backend_Integration__e/Backend_Integration__e.object-meta.xml
<CustomObject>
    <label>Backend Integration</label>
    <pluralLabel>Backend Integrations</pluralLabel>
</CustomObject>