force-app/main/default/objects/Backend_Integration__e/fields/Account_BackendID__c.field-meta.xml
<CustomField>
    <fullName>Account_BackendID__c</fullName>
    <label>Account BackendID</label>
    <length>120</length>
    <type>Text</type>
</CustomField>