force-app/main/default/objects/Backend_Integration__e/fields/Account_Category__c.field-meta.xml
<CustomField>
    <fullName>Account_Category__c</fullName>
    <label>Account_Category</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>