force-app/main/default/objects/Backend_Integration__e/fields/Account_City__c.field-meta.xml
<CustomField>
    <fullName>Account_City__c</fullName>
    <label>Account City</label>
    <length>30</length>
    <type>Text</type>
</CustomField>