force-app/main/default/objects/Backend_Integration__e/fields/Account_Country__c.field-meta.xml
<CustomField>
    <fullName>Account_Country__c</fullName>
    <label>Account Country</label>
    <length>40</length>
    <type>Text</type>
</CustomField>