force-app/main/default/objects/Backend_Integration__e/fields/Account_Country_Code__c.field-meta.xml
<CustomField>
    <fullName>Account_Country_Code__c</fullName>
    <label>Account_Country_Code</label>
    <length>4</length>
    <type>Text</type>
</CustomField>