force-app/main/default/objects/Backend_Integration__e/fields/Account_Email__c.field-meta.xml
<CustomField>
    <fullName>Account_Email__c</fullName>
    <label>Account Email</label>
    <length>255</length>
    <type>Text</type>
</CustomField>