force-app/main/default/objects/Backend_Integration__e/fields/Account_GRID__c.field-meta.xml
<CustomField>
    <fullName>Account_GRID__c</fullName>
    <label>Account GRID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>