force-app/main/default/objects/Backend_Integration__e/fields/Account_Legal_Name__c.field-meta.xml
<CustomField>
    <fullName>Account_Legal_Name__c</fullName>
    <label>Account Legal Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>