force-app/main/default/objects/Backend_Integration__e/fields/Account_Parent__c.field-meta.xml
<CustomField>
    <fullName>Account_Parent__c</fullName>
    <label>Account Parent</label>
    <length>18</length>
    <type>Text</type>
</CustomField>