force-app/main/default/objects/Backend_Integration__e/fields/Account_Parent_GRID__c.field-meta.xml
<CustomField>
    <fullName>Account_Parent_GRID__c</fullName>
    <label>Account Parent GRID</label>
    <length>8</length>
    <type>Text</type>
</CustomField>