force-app/main/default/objects/Backend_Integration__e/fields/Account_Parent_Type__c.field-meta.xml
<CustomField>
    <fullName>Account_Parent_Type__c</fullName>
    <label>Account Parent Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>