force-app/main/default/objects/Backend_Integration__e/fields/Account_Phone__c.field-meta.xml
<CustomField>
    <fullName>Account_Phone__c</fullName>
    <label>Account_Phone</label>
    <length>40</length>
    <type>Text</type>
</CustomField>