force-app/main/default/objects/Backend_Integration__e/fields/Account_Platform__c.field-meta.xml
<CustomField>
    <fullName>Account_Platform__c</fullName>
    <label>Account Platform</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>