force-app/main/default/objects/Backend_Integration__e/fields/Account_Price_Range__c.field-meta.xml
<CustomField>
    <fullName>Account_Price_Range__c</fullName>
    <description>This is the price range of the Account respect of the market</description>
    <label>Account_Price_Range</label>
    <length>255</length>
    <type>Text</type>
</CustomField>