force-app/main/default/objects/Backend_Integration__e/fields/Account_Special_Characteristics__c.field-meta.xml
<CustomField>
    <fullName>Account_Special_Characteristics__c</fullName>
    <label>Account_Special_Characteristics</label>
    <length>255</length>
    <type>Text</type>
</CustomField>