force-app/main/default/objects/Backend_Integration__e/fields/Account_Translated_Name__c.field-meta.xml
<CustomField>
    <fullName>Account_Translated_Name__c</fullName>
    <description>This is a translation into a local language the name of the client name</description>
    <label>Account_Translated_Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>