force-app/main/default/objects/Backend_Integration__e/fields/Account_Vertical__c.field-meta.xml
<CustomField>
    <fullName>Account_Vertical__c</fullName>
    <label>Account Vertical</label>
    <length>255</length>
    <type>Text</type>
</CustomField>