force-app/main/default/objects/Backend_Integration__e/fields/Account_Vertical_Segment__c.field-meta.xml
<CustomField>
    <fullName>Account_Vertical_Segment__c</fullName>
    <label>Account Vertical Segment</label>
    <length>255</length>
    <type>Text</type>
</CustomField>