force-app/main/default/objects/Backend_Integration__e/fields/Add_Charge_Name__c.field-meta.xml
<CustomField>
    <fullName>Add_Charge_Name__c</fullName>
    <label>Add Charge Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>