force-app/main/default/objects/Backend_Integration__e/fields/AddCharge__c.field-meta.xml
<CustomField>
    <fullName>AddCharge__c</fullName>
    <defaultValue>false</defaultValue>
    <label>AddCharge</label>
    <type>Checkbox</type>
</CustomField>