force-app/main/default/objects/Backend_Integration__e/fields/AddCharge_ID__c.field-meta.xml
<CustomField>
    <fullName>AddCharge_ID__c</fullName>
    <label>AddCharge ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>