force-app/main/default/objects/Backend_Integration__e/fields/Address_Area__c.field-meta.xml
<CustomField>
    <fullName>Address_Area__c</fullName>
    <label>Address Area</label>
    <length>255</length>
    <type>Text</type>
</CustomField>