force-app/main/default/objects/Backend_Integration__e/fields/Address_Country__c.field-meta.xml
<CustomField>
    <fullName>Address_Country__c</fullName>
    <label>Address Country</label>
    <length>255</length>
    <type>Text</type>
</CustomField>