force-app/main/default/objects/Backend_Integration__e/fields/Address_postcode__c.field-meta.xml
<CustomField>
    <fullName>Address_postcode__c</fullName>
    <label>Address postcode</label>
    <length>255</length>
    <type>Text</type>
</CustomField>