force-app/main/default/objects/Backend_Integration__e/fields/Address_Street_Number__c.field-meta.xml
<CustomField>
    <fullName>Address_Street_Number__c</fullName>
    <label>Address Street Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>