force-app/main/default/objects/Backend_Integration__e/fields/Addresses__c.field-meta.xml
<CustomField>
    <fullName>Addresses__c</fullName>
    <label>Addresses</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>