force-app/main/default/objects/Backend_Integration__e/fields/Bank_Account_Owner__c.field-meta.xml
<CustomField>
    <fullName>Bank_Account_Owner__c</fullName>
    <label>Bank_Account_Owner</label>
    <length>255</length>
    <type>Text</type>
</CustomField>