force-app/main/default/objects/Backend_Integration__e/fields/Billable_Account_GRID__c.field-meta.xml
<CustomField>
    <fullName>Billable_Account_GRID__c</fullName>
    <label>Billable Account GRID</label>
    <length>6</length>
    <type>Text</type>
</CustomField>