force-app/main/default/objects/Backend_Integration__e/fields/Billing_Contact_First_Name__c.field-meta.xml
<CustomField>
    <fullName>Billing_Contact_First_Name__c</fullName>
    <label>Billing Contact First Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>