force-app/main/default/objects/Backend_Integration__e/fields/Billing_Contact_MiddleName__c.field-meta.xml
<CustomField>
    <fullName>Billing_Contact_MiddleName__c</fullName>
    <label>Billing Contact MiddleName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>