force-app/main/default/objects/Backend_Integration__e/fields/Billing_Contact_MobilePhone__c.field-meta.xml
<CustomField>
    <fullName>Billing_Contact_MobilePhone__c</fullName>
    <label>Billing Contact MobilePhone</label>
    <length>100</length>
    <type>Text</type>
</CustomField>