force-app/main/default/objects/Backend_Integration__e/fields/Billing_Contact_Phone__c.field-meta.xml
<CustomField>
    <fullName>Billing_Contact_Phone__c</fullName>
    <label>Billing Contact Phone</label>
    <length>100</length>
    <type>Text</type>
</CustomField>