force-app/main/default/objects/Backend_Integration__e/fields/Billing_Contact_Suffix__c.field-meta.xml
<CustomField>
    <fullName>Billing_Contact_Suffix__c</fullName>
    <label>Billing Contact Suffix</label>
    <length>50</length>
    <type>Text</type>
</CustomField>