force-app/main/default/objects/Backend_Integration__e/fields/Billing_ContactId__c.field-meta.xml
<CustomField>
    <fullName>Billing_ContactId__c</fullName>
    <label>Billing ContactId</label>
    <length>18</length>
    <type>Text</type>
</CustomField>