force-app/main/default/objects/Backend_Integration__e/fields/Billing_Token__c.field-meta.xml
<CustomField>
    <fullName>Billing_Token__c</fullName>
    <label>Billing Token</label>
    <length>45</length>
    <type>Text</type>
</CustomField>