force-app/main/default/objects/Backend_Integration__e/fields/Budget__c.field-meta.xml
<CustomField>
    <fullName>Budget__c</fullName>
    <description>Field Created for #JIRA : SSC-960</description>
    <label>Budget</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>