force-app/main/default/objects/Backend_Integration__e/fields/Business_office__c.field-meta.xml
<CustomField>
    <fullName>Business_office__c</fullName>
    <label>Business office</label>
    <length>255</length>
    <type>Text</type>
</CustomField>