force-app/main/default/objects/Backend_Integration__e/fields/Commision_Termination_Reason__c.field-meta.xml
<CustomField>
    <fullName>Commision_Termination_Reason__c</fullName>
    <label>Commision_Termination_Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>