force-app/main/default/objects/Backend_Integration__e/fields/Commission__c.field-meta.xml
<CustomField>
    <fullName>Commission__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Commission</label>
    <precision>10</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>