force-app/main/default/objects/Backend_Integration__e/fields/Commission_Base__c.field-meta.xml
<CustomField>
    <fullName>Commission_Base__c</fullName>
    <label>Commission Base</label>
    <length>40</length>
    <type>Text</type>
</CustomField>