force-app/main/default/objects/Backend_Integration__e/fields/Commission_Based_On__c.field-meta.xml
<CustomField>
    <fullName>Commission_Based_On__c</fullName>
    <label>Commission Based On</label>
    <length>20</length>
    <type>Text</type>
</CustomField>