force-app/main/default/objects/Backend_Integration__e/fields/Commission_ID__c.field-meta.xml
<CustomField>
    <fullName>Commission_ID__c</fullName>
    <label>Commission ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>