force-app/main/default/objects/Backend_Integration__e/fields/Commission_Name__c.field-meta.xml
<CustomField>
    <fullName>Commission_Name__c</fullName>
    <label>Commission Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>