force-app/main/default/objects/Backend_Integration__e/fields/Commission_Tiers__c.field-meta.xml
<CustomField>
    <fullName>Commission_Tiers__c</fullName>
    <label>Commission Tiers</label>
    <length>20000</length>
    <type>LongTextArea</type>
</CustomField>