force-app/main/default/objects/Backend_Integration__e/fields/Commission_Type__c.field-meta.xml
<CustomField>
    <fullName>Commission_Type__c</fullName>
    <label>Commission Type</label>
    <length>40</length>
    <type>Text</type>
</CustomField>