force-app/main/default/objects/Backend_Integration__e/fields/Commission_Value_Type__c.field-meta.xml
<CustomField>
    <fullName>Commission_Value_Type__c</fullName>
    <label>Commission Value Type</label>
    <length>20</length>
    <type>Text</type>
</CustomField>