force-app/main/default/objects/Backend_Integration__e/fields/Contact_MiddleName__c.field-meta.xml
<CustomField>
    <fullName>Contact_MiddleName__c</fullName>
    <label>Contact MiddleName</label>
    <length>40</length>
    <type>Text</type>
</CustomField>