force-app/main/default/objects/Backend_Integration__e/fields/Contact_MobilePhone__c.field-meta.xml
<CustomField>
    <fullName>Contact_MobilePhone__c</fullName>
    <label>Contact MobilePhone</label>
    <length>100</length>
    <type>Text</type>
</CustomField>