force-app/main/default/objects/Backend_Integration__e/fields/Contact_Phone__c.field-meta.xml
<CustomField>
    <fullName>Contact_Phone__c</fullName>
    <label>Contact Phone</label>
    <length>50</length>
    <type>Text</type>
</CustomField>