force-app/main/default/objects/Backend_Integration__e/fields/Contact_Saludation__c.field-meta.xml
<CustomField>
    <fullName>Contact_Saludation__c</fullName>
    <label>Contact Saludation</label>
    <length>50</length>
    <type>Text</type>
</CustomField>