force-app/main/default/objects/Backend_Integration__e/fields/Contact_Suffix__c.field-meta.xml
<CustomField>
    <fullName>Contact_Suffix__c</fullName>
    <label>Contact Suffix</label>
    <length>40</length>
    <type>Text</type>
</CustomField>