force-app/main/default/objects/Backend_Integration__e/fields/Contacts__c.field-meta.xml
<CustomField>
    <fullName>Contacts__c</fullName>
    <description>Json that Include all the contacts  with the roles specify into the Eventbus bussiness config</description>
    <label>Contacts</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>