force-app/main/default/objects/Backend_Integration__e/fields/Courier_Service__c.field-meta.xml
<CustomField>
    <fullName>Courier_Service__c</fullName>
    <label>Courier_Service</label>
    <length>255</length>
    <type>Text</type>
</CustomField>