force-app/main/default/objects/Backend_Integration__e/fields/Delivery_ServicePicklist__c.field-meta.xml
<CustomField>
    <fullName>Delivery_ServicePicklist__c</fullName>
    <label>Delivery ServicePicklist</label>
    <length>255</length>
    <type>Text</type>
</CustomField>