force-app/main/default/objects/Backend_Integration__e/fields/Dietary_information__c.field-meta.xml
<CustomField>
    <fullName>Dietary_information__c</fullName>
    <label>Dietary_information</label>
    <length>255</length>
    <type>Text</type>
</CustomField>