force-app/main/default/objects/Backend_Integration__e/fields/Discount__c.field-meta.xml
<CustomField>
    <fullName>Discount__c</fullName>
    <label>Discount</label>
    <length>10</length>
    <type>Text</type>
</CustomField>