force-app/main/default/objects/Backend_Integration__e/fields/Event_Type__c.field-meta.xml
<CustomField>
    <fullName>Event_Type__c</fullName>
    <description>This field describe which kind of Event, update Account, update Contact, Update Address</description>
    <label>Event Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>