force-app/main/default/objects/Backend_Integration__e/fields/Giro__c.field-meta.xml
<CustomField>
    <fullName>Giro__c</fullName>
    <label>Giro</label>
    <length>255</length>
    <type>Text</type>
</CustomField>