force-app/main/default/objects/Backend_Integration__e/fields/Invoice_Frequency__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Frequency__c</fullName>
    <label>Invoice_Frequency</label>
    <length>255</length>
    <type>Text</type>
</CustomField>