force-app/main/default/objects/Backend_Integration__e/fields/Invoice_Type__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Type__c</fullName>
    <label>Invoice_Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>