force-app/main/default/objects/Backend_Integration__e/fields/Key_VIP_Account__c.field-meta.xml
<CustomField>
    <fullName>Key_VIP_Account__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Key VIP Account</label>
    <type>Checkbox</type>
</CustomField>