force-app/main/default/objects/Backend_Integration__e/fields/List_Price__c.field-meta.xml
<CustomField>
    <fullName>List_Price__c</fullName>
    <label>List Price</label>
    <precision>11</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>