force-app/main/default/objects/Backend_Integration__e/fields/Mark_for_Testing_Training__c.field-meta.xml
<CustomField>
    <fullName>Mark_for_Testing_Training__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Mark for Testing Training</label>
    <type>Checkbox</type>
</CustomField>