force-app/main/default/objects/Backend_Integration__e/fields/Owner_Email__c.field-meta.xml
<CustomField>
    <fullName>Owner_Email__c</fullName>
    <label>Owner Email</label>
    <length>255</length>
    <type>Text</type>
</CustomField>