force-app/main/default/objects/Backend_Integration__e/fields/Platform_GRID__c.field-meta.xml
<CustomField>
    <fullName>Platform_GRID__c</fullName>
    <label>Platform GRID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>