force-app/main/default/objects/Backend_Integration__e/fields/Platform_Name__c.field-meta.xml
<CustomField>
    <fullName>Platform_Name__c</fullName>
    <label>Platform Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>