force-app/main/default/objects/Backend_Integration__e/fields/Product_Group__c.field-meta.xml
<CustomField>
    <fullName>Product_Group__c</fullName>
    <label>Product Group</label>
    <length>50</length>
    <type>Text</type>
</CustomField>