force-app/main/default/objects/Backend_Integration__e/fields/Registration_office__c.field-meta.xml
<CustomField>
    <fullName>Registration_office__c</fullName>
    <label>Registration office</label>
    <length>255</length>
    <type>Text</type>
</CustomField>