force-app/main/default/objects/Backend_Integration__e/fields/Restaurant_Name__c.field-meta.xml
<CustomField>
    <fullName>Restaurant_Name__c</fullName>
    <description>Account Restaurant Name</description>
    <label>Restaurant Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>