force-app/main/default/objects/Backend_Integration__e/fields/Salesforce_Id__c.field-meta.xml
<CustomField>
    <fullName>Salesforce_Id__c</fullName>
    <label>Salesforce Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>