force-app/main/default/objects/Backend_Integration__e/fields/Shared_Menu_GRID__c.field-meta.xml
<CustomField>
    <fullName>Shared_Menu_GRID__c</fullName>
    <label>Shared_Menu_GRID</label>
    <length>7</length>
    <type>Text</type>
</CustomField>