force-app/main/default/objects/Backend_Integration__e/fields/Swift_Code_BIC__c.field-meta.xml
<CustomField>
    <fullName>Swift_Code_BIC__c</fullName>
    <label>Swift_Code_BIC</label>
    <length>11</length>
    <type>Text</type>
</CustomField>