force-app/main/default/objects/Backend_Integration__e/fields/Tariff_Name__c.field-meta.xml
<CustomField>
    <fullName>Tariff_Name__c</fullName>
    <label>Tariff Name</label>
    <length>60</length>
    <type>Text</type>
</CustomField>