force-app/main/default/objects/Backend_Integration__e/fields/Termination_Reason__c.field-meta.xml
<CustomField>
    <fullName>Termination_Reason__c</fullName>
    <label>Termination Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>