force-app/main/default/objects/Backend_Integration__e/fields/Total__c.field-meta.xml
<CustomField>
    <fullName>Total__c</fullName>
    <label>Total</label>
    <precision>9</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>