force-app/main/default/objects/Backend_Integration__e/fields/Trade_Register_Number__c.field-meta.xml
<CustomField>
    <fullName>Trade_Register_Number__c</fullName>
    <label>Trade Register Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>