force-app/main/default/objects/Backend_Integration__e/fields/Vendor_Status__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Status__c</fullName>
    <label>Vendor Status</label>
    <length>100</length>
    <type>Text</type>
</CustomField>